using links for gravatar upload instead of buttons

--- a/src/geopd/templates/members/profile.html
+++ b/src/geopd/templates/members/profile.html
@@ -21,9 +21,9 @@
                 {% if member.id == current_user.id %}
                     <div class="gravatar-help btn-group-vertical hidden center-block">
                         <a href="https://en.gravatar.com/site/login"
-                           class="btn btn-primary">Upload my picture<br/>using Gravatar</a>
+                           class="btn btn-link btn-sm">Upload picture with Gravatar</a>
                         <a href="https://en.gravatar.com/support/what-is-gravatar/"
-                           class="btn btn-primary">What is Gravatar?</a>
+                           class="btn btn-link btn-sm">What is Gravatar?</a>
                     </div>
                 {% endif %}
             </div>
