--- a/src/geopd/templates/contact.html
+++ b/src/geopd/templates/contact.html
@@ -41,7 +41,7 @@
                         </div>
 
                         <div class="form-group">
-                            {{ recaptcha }}
+                            {{ form.recaptcha }}
                         </div>
 
                         <div class="form-group">
